manifests/ingress-1.yml
apiVersion: v1
kind: Service
metadata:
  name: jakube-3b76
spec:
  type: LoadBalancer
  selector:
    app: jakube-3b76
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
