manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "funbytes119-9c96"
    labels:
        app: "funbytes119-9c96"
spec:
    type: ClusterIP
    ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
    selector:
        app: "funbytes119-9c96"
